# protein2genomic

./: .gitignore  CMakeLists.txt  README.md  test.bed
benchmarks/: index_build.json  plot_benchmark.py  results.tsv  run_benchmark.py
include/: common.hpp
python/: pyproject.toml
python/protein2genomic_plot/: __init__.py  plot.py
scripts/: README.md  _mapping.py  prepare_from_interpro.py  prepare_from_pfam.py  prepare_from_uniprot_features.py
src/: domain_mapper.cpp  domain_mapper.hpp  gtf_parser.cpp  gtf_parser.hpp  main.cpp  output_writer.cpp  output_writer.hpp  utils.cpp  utils.hpp
tests/: make_synthetic_gtf.py  no_tags.gtf  run_tests.py  with_tags.gtf
